Paginação na listagem de usuários, cria UserResource
